--- a/Services-main/services.css
+++ b/Services-main/services.css
@@ -378,6 +378,7 @@ footer .footer-bottom a {
     .menu-button {
         display: block; /* Make the menu button visible */
     }
+
   }
   @media (max-width: 800px){
     .top-links{
@@ -395,6 +396,7 @@ footer .footer-bottom a {
     }
     
     .info-content {
+        display: none;
         background-color: rgba(0, 153, 0, 0.8);
         color: #fff;
         padding: 15px;
@@ -606,7 +608,7 @@ footer .footer-bottom a {
 }
 
 .service-content {
-    max-width: 100%;
+    max-width: 90%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
