--- a/Services-main/contact.css
+++ b/Services-main/contact.css
@@ -52,29 +52,30 @@ body {
   margin-right: 10px;
 }
 
-.sidebar {
+.sidebar{
+  margin-top: 50px;
+  padding-top: 40px;                 
   position: fixed;
   top: 0;
-  right: 0;
-  width: 250px;
+  right:0;
   height: 100vh;
-  background-color: #fff;
-  padding: 100px 20px;
-  z-index: 1000;
-  transition: 0.4s;
-  display: none;
+  width: 250px;    
+  background-color: rgb(255, 255, 255);
+  backdrop-filter: blur(10px);
+  box-shadow: bisque;
+  display:none;
+  flex-direction: column;
+  align-items: start;
+  justify-content: flex-start;
 }
-
-.sidebar a {
-  display: block;
-  margin: 10px 0;
-  text-decoration: none;
-  color: #333;
-  font-size: 18px;
+.sidebar li{
+  width: 100%;
 }
-
-.sidebar a:hover {
-  color: #007500;
+.sidebar a{
+  width: 100%;
+  color: #000000;        
+  text-decoration: none;        
+  padding: 7px 40px;
 }
 
 .navigation {
