--- a/Services-main/contact.css
+++ b/Services-main/contact.css
@@ -2,29 +2,28 @@ body {
   margin: 0;
   font-family: "Poppins", sans-serif;
   background-color: #f4f4f4;
-  padding-top: 140px; /* Adjust according to header height */
+  padding-top: 140px;
 }
 
-.header {
+.header {    
   background-color: #ffffff;
   position: fixed;
   width: 100%;
   top: 0;
   z-index: 9999;
-  color: #ffffff;
+  color: #ffffff; 
 }
 
 .top-bar {
   display: flex;
   justify-content: space-between;
-  padding: 14px 210px;
-  background-color: #007500;
+  padding: 14px 210px;    
+  background-color: #007500;    
 }
-
 .top-links a {
-  color: #fff;
+  color: #fff;           
   text-decoration: none;
-  margin-left: 20px;
+  margin-left: 20px;    
 }
 
 .top-links a:hover {
@@ -32,6 +31,7 @@ body {
   background-color: #ffffff;
   color: #007500;
   text-decoration: none;
+  border-radius: auto; 
 }
 
 .main-header {
@@ -78,29 +78,26 @@ body {
   padding: 7px 40px;
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
+.navigation li{
+  list-style-type: none;
+  display: inline;
 
-.navigation ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
-
-.navigation ul li {
-  margin-right: 20px;
-}
-
-.navigation ul li a {
+.navigation a {    
+  color: #000000;
   text-decoration: none;
-  color: #000;
-  font-weight: 600;
+  padding: 10px 15px;
+  
 }
 
-.menu-button {
+.navigation a:hover {    
+  padding: 20px 15px;
+  background-color: #00773e;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 10px;    
+}
+.menu-button{
   display: none;
 }
 
